# decaf

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  vcpkg.json
.circleci/: config.yml
include/: decaf.h  macros.h
src/: assert.cpp  decaf.cpp
tests/: CMakeLists.txt  common.cpp  common.h  icmp.cpp  opcodes.cpp  test-common.hpp  test-fail.cpp  test-pass.cpp
tests/include/: decaf.h
tests/run-fail/: CMakeLists.txt  collatz.c  sample.c  sdiv-nonzero.c  sdiv-udiv-inequal.c  sdiv-zero.c
tests/run-pass/: CMakeLists.txt  brach-false.c  branch-true.c  decaf.h  sdiv-negative.c  sdiv-udiv-equal-nonnegative.c  sext.ll  trunc.ll  udiv-large.c  zext.ll
tests/unit/: CMakeLists.txt  common.h  opcodes.cpp
